--- a/client/styles.css
+++ b/client/styles.css
@@ -82,11 +82,15 @@ main {
 }
 
 #game-header>div, .player-hand-area {
-    padding: 5px;
+    padding: 10px;
 }
 
 .label {
     padding: 3px;
+}
+
+input {
+    margin-bottom: 5px;
 }
 
 /* End Margin/Padding Settings */
@@ -98,6 +102,10 @@ main {
 
 span {
     font-size: 100px;
+}
+
+#player-chip-total {
+    font-size: 35px;
 }
 
 /* End Font and Text Size Settings */
